app2.log
   Compiling ocfs v0.1.0 (/Users/THarpool/RustroverProjects/ocfs)
error[E0277]: the trait bound `fn(Extension<Pool<Postgres>>, axum::Json<CaseData>, TypedHeader<XTestClient>) -> impl std::future::Future<Output = impl IntoResponse> {create_case_data}: Handler<_, _>` is not satisfied
   --> src/main.rs:32:35
    |
32  |         .route("/case_data", post(handlers::create_case_data))
    |                              ---- ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Handler<_, _>` is not implemented for fn item `fn(Extension<Pool<Postgres>>, Json<CaseData>, TypedHeader<XTestClient>) -> ... {create_case_data}`
    |                              |
    |                              required by a bound introduced by this call
    |
    = help: the following other types implement trait `Handler<T, S>`:
              <axum_extra::handler::Or<L, R, Lt, Rt, S> as Handler<(M, Lt, Rt), S>>
              <IntoHandler<H, T, S> as Handler<T, S>>
              <axum::handler::Layered<L, H, T, S> as Handler<T, S>>
              <MethodRouter<S> as Handler<(), S>>
note: required by a bound in `post`
   --> /Users/THarpool/.cargo/registry/src/index.crates.io-6f17d22bba15001f/axum-0.7.5/src/routing/method_routing.rs:389:1
    |
389 | top_level_handler_fn!(post, POST);
    | ^^^^^^^^^^^^^^^^^^^^^^----^^^^^^^
    | |                     |
    | |                     required by a bound in this function
    | required by this bound in `post`
    = note: this error originates in the macro `top_level_handler_fn` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `fn(Extension<Pool<Postgres>>, axum::extract::Path<i32>, axum::Json<UpdateCaseData>, TypedHeader<XTestClient>) -> impl std::future::Future<Output = impl IntoResponse> {update_case_data}: Handler<_, _>` is not satisfied
   --> src/main.rs:33:40
    |
33  |         .route("/case_data/:id", patch(handlers::update_case_data))
    |                                  ----- ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Handler<_, _>` is not implemented for fn item `fn(Extension<Pool<Postgres>>, Path<i32>, Json<UpdateCaseData>, TypedHeader<...>) -> ... {update_case_data}`
    |                                  |
    |                                  required by a bound introduced by this call
    |
    = help: the following other types implement trait `Handler<T, S>`:
              <axum_extra::handler::Or<L, R, Lt, Rt, S> as Handler<(M, Lt, Rt), S>>
              <IntoHandler<H, T, S> as Handler<T, S>>
              <axum::handler::Layered<L, H, T, S> as Handler<T, S>>
              <MethodRouter<S> as Handler<(), S>>
note: required by a bound in `patch`
   --> /Users/THarpool/.cargo/registry/src/index.crates.io-6f17d22bba15001f/axum-0.7.5/src/routing/method_routing.rs:388:1
    |
388 | top_level_handler_fn!(patch, PATCH);
    | ^^^^^^^^^^^^^^^^^^^^^^-----^^^^^^^^
    | |                     |
    | |                     required by a bound in this function
    | required by this bound in `patch`
    = note: this error originates in the macro `top_level_handler_fn` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0277`.
error: could not compile `ocfs` (bin "ocfs") due to 2 previous errors
